2008-02-07  Richard Hult  <richard@imendio.com>

	* Release 0.19.

2008-02-07  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

	* misc/gedit-plugin/devhelp.desktop.in: Add icon, fixes bug
	#512000.

2008-01-30  Richard Hult  <richard@imendio.com>

	* Release 0.18.

	* configure.in: Bump version.

2008-01-24  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Richard Hult

	* src/dh-window.c: (window_class_init), (window_new_tab_label):

	Use proper size icon for close buttons in tabs. Fixes bug #510984.

2008-01-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Richard Hult

	* data/ui/window.ui:

	Remove "Default zoom level" from the toolbar. Move "Zoom
	out" button to left side of "Zoom in" button. Add
	separator to separate zoom buttons from the navigational
	buttons. Fixes bug #508510.

2008-01-13  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Richart Hult

	* src/dh-window.c:

	Use "text size" instead of "zoom" in the menus and
	buttons. Fixes bug #508111. Add tooltips to navigational
	toolbar items. Fixes bug #508513.

2008-01-07  Richard Hult  <richard@imendio.com>

	* Release 0.17.

2008-01-07  Richard Hult  <richard@imendio.com>

	* NEWS: Prepare for a release.

2007-12-19  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (main): Fix bug #354895, Devhelp doesn't run new
	instance on new display.

2007-12-19  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/Makefile.am:
	* data/ui:
	* data/icons: Add new icons from Andreas Nilsson, fixes bug
	#463131.

2007-12-19  Richard Hult  <richard@imendio.com>


	* data/ui/window.ui:
	* src/Yelper.cpp:
	* src/Yelper.h:
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h:
	* src/dh-html.c: (dh_html_search_find_again):
	* src/dh-html.h:
	* src/dh-window.c: (dh_window_get_type), (window_class_init),
	(window_init), (window_finalize), (window_activate_quit),
	(window_activate_copy), (window_activate_find): Fix bug #144517,